Fixes alignment of elements in the show page and allows the title to take a larger horizontal space.

--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -19,3 +19,20 @@
   padding-left: 15px;
   padding-bottom: 20px;
 }
+
+.index_title {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.issue-date-heading {
+  padding-left: 0px;
+}
+
+.abstract-container {
+  padding-left: 0px;
+}
+
+.description-container {
+  padding-left: 0px;
+}
